--- a/styles.css
+++ b/styles.css
@@ -8,5 +8,58 @@
     top: 0;
     margin-left: -40px;
     text-align: center;
+    
+}
+.logo:hover{
+    background-color: white;
+}
 
+.csik {
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+}
+hr {
+    background-color: red;
+    color: red;
+    height: 1px;
+    opacity: 100%;
+    
+}
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+.anim  {
+    box-shadow: inset 0 0 0 0 red;
+    color: black;
+    margin: 0 -.25rem;
+    padding: 0 .25rem;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+    text-decoration: none;
+  }
+  .anim:hover {
+    box-shadow: inset 100px 0 0 0 red;
+    color: white;
+  }
+nav a:hover {
+    background-color: rgb(252, 50, 50);
+    color: white !important;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+    box-shadow: inset 0 0 0 0 red;
+    
+    
+    
+  }
+ h3 span {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    display: block;
+    padding-top: px;
+}
+h3 {
+    font-size: 20px;
+}
+.price {
+    float: right;
 }
