--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
     top: 0;
     margin-left: -40px;
     text-align: center;
-
+    overflow: visible
     
 }
 .logo:hover{
@@ -82,6 +82,7 @@ nav {
 }
 body {
     background-color: #f0f0f0;
+    overflow-x: hidden;
 }
 button{
     border: none;
@@ -90,7 +91,10 @@ button{
 .left {
     position: absolute;
     left: 100%;
+    padding-left: 60px;
+    padding-right: 60px;
 }
 html {
     scroll-behavior: smooth;
 }
+
