--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ hr {
 }
 body {
     font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
 }
 .anim  {
     box-shadow: inset 0 0 0 0 red;
