--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 
 .header-image {
     padding: 0px;
-    margin: 0px;
+    
     width: 100%;
     height: 306px;  
     background-repeat: no-repeat;
@@ -25,6 +25,7 @@
     overflow: hidden;
     z-index: 1;
     background-image: url(kepek/head.jpg);
+    margin-top: 61px;
 }
 hr {
     background-color: red;
@@ -111,4 +112,7 @@ a:hover {
 .footer {
     color: red;
     
+}
+nav {
+    background-color: white;
 }
